--- a/frontend/css/comex.css
+++ b/frontend/css/comex.css
@@ -51,14 +51,17 @@ footer {
     text-align: right;
     font-size: 0.875rem;
 }
+
 footer path {
 
     fill: currentColor;
 }
+
 footer > div.left {
     margin-right: auto;
 
 }
+
 footer > div {
     padding-bottom: 1.25rem;
     padding-top: 1.25rem;
@@ -73,4 +76,81 @@ footer > div a:hover,
 footer > div a:active,
 footer > div a:focus {
     color: #e5e5e5;
+}
+
+#add-source-modal {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+#add-source-modal > div {
+    position: relative;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+/* Add Animation */
+@keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0
+    }
+    to {
+        top: 0;
+        opacity: 1
+    }
+}
+
+#add-source-modal .close {
+    color: #aaa;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+#add-source-modal .close:hover,
+#add-source-modal .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#add-source-modal input {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    box-shadow: inset 0 1px 3px #ddd;
+}
+
+#add-source-modal .logo {
+    height: 1.2em;
+}
+
+#add-source-modal a::after {
+    content: '•';
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
+#add-source-modal a:last-of-type::after {
+    content: none;
 }
