--- a/frontend/css/comex.css
+++ b/frontend/css/comex.css
@@ -148,9 +148,11 @@ footer > div a:focus {
 #sidebar .source h2 a {
     color: #252525;
 }
+
 #sidebar .source h2 a:hover {
     color: #686868;
 }
+
 #sidebar .source .info {
     font-size: 0.75em;
     color: #808080;
@@ -163,10 +165,12 @@ footer > div a:focus {
     vertical-align: middle;
     font-size: 1.4em;
 }
+
 #sidebar .source .info .comments {
     position: relative;
     cursor: pointer;
 }
+
 #sidebar .source .info .comments::after {
     border-top: 1px solid currentColor;
     bottom: -1px;
@@ -419,4 +423,82 @@ footer > div a:focus {
     background-color: #880d07;
     color: #fff;
     cursor: pointer;
+}
+
+
+.pretty-select {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.pretty-select label {
+    padding: 0 2em 0 0.5em;
+    display: flex;
+    align-items: center;
+    background-color: #e1e1e1;
+    border-bottom: #878787 dashed 1px;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    pointer-events: none;
+    order: 2;
+    z-index: 1;
+    transition: background .1s ease-in-out;
+    box-sizing: border-box;
+    overflow: hidden;
+    white-space: nowrap;
+    line-height: 2em;
+}
+
+.pretty-select label:hover {
+    background: #dcd9d9;
+}
+
+.pretty-select:focus label {
+    position: relative;
+    pointer-events: all;
+}
+
+.pretty-select input {
+    opacity: 0;
+    position: absolute;
+    left: -99999px;
+}
+
+.pretty-select input:checked + label {
+    order: 1;
+    z-index: 2;
+    background: #e1e1e1;
+    border: 1px solid #8c8c8c;
+    position: relative;
+    color: #252525;
+    margin-bottom: 2px;
+}
+
+.pretty-select input:checked + label:after {
+    content: '';
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid white;
+    position: absolute;
+    right: 10px;
+    top: calc(50% - 2.5px);
+    pointer-events: none;
+    z-index: 3;
+}
+
+.pretty-select input:checked + label:before {
+    position: absolute;
+    right: 0;
+    height: 2em;
+    width: 2em;
+    content: '';
+    background-color: #8c8c8c;
+}
+
+#sidebar .pretty-select {
+    margin: 2rem 3rem 1rem 3rem;
 }
